# Codewars.hs

./: CHANGELOG.md  Codewars.cabal  Sudoku-hs.cabal
app/: ElementaryConveyor.hs  Green.hs  Main.hs  Sudoku.hs
